name:                add-parens
version:             0.1.0.0
synopsis:            Program for adding explicit layout and parentheses to an
                     expression.

description:         This package provides an executable that parses an
                     expression from stdin and then renders that expression
                     back to stdout after adding explicit parentheses and
                     layout to the expression. It is intended to be used as
                     a learning tool to help understand Haskell syntax.

category:            Development
license:             ISC
license-file:        LICENSE
author:              Eric Mertens
maintainer:          emertens@gmail.com
copyright:           2018 Eric Mertens
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable AddParens
  main-is:             Main.hs
  build-depends:       base             == 4.11.*,
                       haskell-src-exts == 1.20.*,
                       syb              == 0.7.*
  default-language:    Haskell2010

